--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,17 @@ html body {
 }
 
 body {
-  font-family: system-ui, sans-serif;
+  font-family: Times;
   font-size: 75%;
-  background-color: #d3d3d3;
+  background-color: #DBD9DB;
 }
-
+.emphasis {
+  font-family: sans-serif;
+  font-size: 60%;
+  width: 100%;
+  display: block;
+  text-align: center;
+}
 .container {
   margin: 20px auto;
   width: 90%;
@@ -52,14 +58,14 @@ h1 {
 
 /* background images*/
 .baku {
-  background-image: url(/images/baku.jpg);
+  background-image: url(../baku.jpg);
 }
 .london {
-  background-image: url(/images/london.png);
+  background-image: url(../london.png);
 }
 .madrid {
-  background-image: url(/images/madrid.jpg);
+  background-image: url(../madrid.jpg);
 }
 .rome {
-  background-image: url(/images/rome.jpg);
+  background-image: url(../rome.jpg);
 }
