--- a/css/style.css
+++ b/css/style.css
@@ -52,14 +52,14 @@ h1 {
 
 /* background images*/
 .baku {
-  background-image: url(/images/baku.jpg);
+  background-image: url(../images/baku.jpg);
 }
 .london {
-  background-image: url(/images/london.png);
+  background-image: url(../images/london.png);
 }
 .madrid {
-  background-image: url(/images/madrid.jpg);
+  background-image: url(../images/madrid.jpg);
 }
 .rome {
-  background-image: url(/images/rome.jpg);
+  background-image: url(../images/rome.jpg);
 }
